k8s-04/2/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-tool-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-tool
  template:
    metadata:
      labels:
        app: back-tool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
