k8s-04/2/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-nginx
  template:
    metadata:
      labels:
        app: front-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.26.2
        ports:
        - containerPort: 80
