k8s-04/2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  type: ClusterIP
  selector:
    app: front-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
